wip: update theming docs

--- a/src/docs/5.34.x/page-builder/theming/best-practices.mdx
+++ b/src/docs/5.34.x/page-builder/theming/best-practices.mdx
@@ -21,3 +21,4 @@ import { Alert } from "@/components/Alert";
 ## page elements - when to put styles into theme
 ## global styles
 ## overriding existing elements
+## styles by id
