--- a/src/docs/5.34.x/page-builder/theming/layouts.mdx
+++ b/src/docs/5.34.x/page-builder/theming/layouts.mdx
@@ -7,13 +7,14 @@ import { Alert } from "@/components/Alert";
 import staticPageTemplate from "./images/static-page-template.png";
 import pageBuilderLayoutSelectCategory from "./images/page-builder-layout-select-category.png";
 import pageBuilderLayoutPageSettings from "./images/page-builder-layout-select-page-settings.png";
+import pageBuilderSettingsIcon from "./images/page-builder-settings-icon.png";
 
 <!-- Always include this section on top of the page. -->
 
 <Alert type="success" title="What You’ll Learn">
 
-  - what does the Page Builder theme consist of
-  - what plugins are used in Page Builder theme
+- what does the Page Builder theme consist of
+- what plugins are used in Page Builder theme
 
 </Alert>
 
@@ -23,11 +24,11 @@ All pages created with Page Builder's page editor are rendered within a page lay
 
 For example, the **Static page** layout, that's by default included in every Webiny project, renders pages in a relatively standard **header** → **content** → **footer** structure.
 
-<Image src={staticPageTemplate} title={"Static Page Layout"} shadow={false}/>
+<Image src={staticPageTemplate} title={"Static Page Layout"} shadow={false} />
 
 ## React Components and Plugins
 
-On the code level, page layouts consist of one or more React components. For example, if we were to take a look at the `Static.tsx` file, located in the `apps/theme/layouts/pages` folder, we would see the following code:
+On the code level, page layouts consist of one or more React components. For example, if we were to take a look at the [`Static.tsx`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/layouts/pages/Static.tsx) file, located in the [`apps/theme/layouts/pages`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/layouts/pages) folder, we would see the following code:
 
 ```tsx apps/theme/layouts/pages/Static.tsx
 import React from "react";
@@ -37,37 +38,37 @@ import { Header } from "./Static/Header";
 import { Footer } from "./Static/Footer";
 
 const globalStyles = css`
-    html {
-        scroll-behavior: smooth;
-    }
+  html {
+    scroll-behavior: smooth;
+  }
 
-    @media screen and (prefers-reduced-motion: reduce) {
-        html {
-            scroll-behavior: smooth;
-        }
+  @media screen and (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: smooth;
     }
+  }
 `;
 
 const Layout = styled.div`
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 
-    footer {
-        margin-top: auto;
-    }
+  footer {
+    margin-top: auto;
+  }
 `;
 
 const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
-    return (
-        <Layout>
-            <Global styles={globalStyles} />
-            <Header />
-            {/* We render the actual page content via the "children" prop. */}
-            <main>{children}</main>
-            <Footer />
-        </Layout>
-    );
+  return (
+    <Layout>
+      <Global styles={globalStyles} />
+      <Header />
+      {/* We render the actual page content via the "children" prop. */}
+      <main>{children}</main>
+      <Footer />
+    </Layout>
+  );
 };
 
 export default Static;
@@ -78,9 +79,9 @@ Essentially, the file exports a page layout React component, which renders the f
 1. the actual page layout (notice extra components like `Layout` and `Header`)
 2. the page content created via Page Builder's page editor (passed via the `children` prop)
 
-Depending on the requirements, page layouts can be simple or more complex. For example, the `Static.tsx` file also contains `Header` and `Footer` components, which are used to render the header and footer of the page layout. 
+Depending on the requirements, page layouts can be simple or more complex. For example, the [`Static.tsx`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/layouts/pages/Static.tsx) file also contains `Header` and `Footer` components, which are used to render the header and footer of the page layout.
 
-Ultimately, all page layouts are registered via the [`PbPageLayoutPlugin`](#), plugin, which can be done within the `apps/theme/index.ts` file:
+Ultimately, all page layouts are registered via the [`PbPageLayoutPlugin`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/app-page-builder/src/plugins/PbPageLayoutPlugin.ts#L4-L12), plugin, which can be done within the [`apps/theme/index.ts`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/index.ts) entrypoint file:
 
 ```diff-ts apps/theme/index.ts
 import { PbPageLayoutPlugin } from "@webiny/app-page-builder";
@@ -99,13 +100,13 @@ import DefaultFormLayout from "./layouts/forms/DefaultFormLayout";
 // To learn more, see: https://www.webiny.com/docs/page-builder/theming/introduction.
 export default () => [
     new ThemePlugin(theme),
-    
+
 +   new PbPageLayoutPlugin({
 +       name: "static",
 +       title: "Static page",
 +       component: StaticLayout
 +   }),
-    
+
     new FbFormLayoutPlugin({
         name: "default",
         title: "Default form layout",
@@ -120,13 +121,13 @@ More on this in the following section.
 
 ### Assigning Page Layouts to Pages
 
-Page layouts can be assigned to pages in two ways. 
+Page layouts can be assigned to pages in two ways.
 
 #### 1. Page Categories
 
-The first is by selecting a default page layout for a page category. For example, if we were to create a new **Blogs** category, and we selected the **Static page** layout in the **Layout** field, all pages created in the **Blogs** category would be rendered using the **Static page** layout. 
+The first is by selecting a default page layout for a page category. For example, if we were to create a new **Blogs** category, and we selected the **Static page** layout in the **Layout** field, all pages created in the **Blogs** category would be rendered using the **Static page** layout.
 
-<Image src={pageBuilderLayoutSelectCategory} title={"Theme Colors"}/>
+<Image src={pageBuilderLayoutSelectCategory} title={"Theme Colors"} />
 
 Note that the layout can be changed at any time, and the change will be reflected on all existing pages that use the layout. Additionally, the layout can be changed for individual pages, which will override the default layout set via the category. This is covered in the next section.
 
@@ -136,29 +137,35 @@ Page layout can also be selected via page settings in the page editor. This enab
 
 This is achieved by selecting the desired layout in the **Layout** field, located in the **General Settings** tab in the page settings area.
 
-<Image src={pageBuilderLayoutPageSettings} title={"Selecting Page Layout via Page Settings"}/>
+<Image src={pageBuilderLayoutPageSettings} title={"Selecting Page Layout via Page Settings"} />
 
+<Alert type={'info'}>
+
+Page settings can be accessed by clicking on the cogwheel icon, located in the top right corner of the page editor.
+<Image src={pageBuilderSettingsIcon} title={"Selecting Page Layout via Page Settings"} />
+
+</Alert>
 
 ## Introducing New Page Layouts
 
-If required, users can introduce additional page layouts into their project and use them with different pages. For example, let's imagine we wanted to introduce a completely blank layout, that doesn't render any header or footer. 
+If required, users can introduce additional page layouts into their project and use them with different pages. For example, let's imagine we wanted to introduce a completely blank layout, that doesn't render any header or footer.
 
-Like with the **Static page** layout, we would need to create a new page layout React component, and register it via the `PbPageLayoutPlugin` plugin.
+Like with the **Static page** layout, we would need to create a new page layout React component, and register it via the [`PbPageLayoutPlugin`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/app-page-builder/src/plugins/PbPageLayoutPlugin.ts#L4-L12) plugin.
 
-For the component, the following would be all that's required:
+For the component, the following would be all the code that's required:
 
 ```tsx apps/theme/layouts/pages/Blank.tsx
 import React from "react";
 
 const Blank: React.FC<{ children: React.ReactNode }> = ({ children }) => {
-    // Simply render the "children" prop, which contains the actual page content.
-    return children
+  // Simply render the "children" prop, which contains the actual page content.
+  return children;
 };
 
 export default Blank;
 ```
 
-And for the registration, we would need to add the following to the `apps/theme/index.ts` file:
+And for the registration, we would need to add the following to the [`apps/theme/index.ts`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/index.ts#L18-L22) file:
 
 ```diff-ts apps/theme/index.ts
 import { PbPageLayoutPlugin } from "@webiny/app-page-builder";
@@ -178,19 +185,19 @@ import DefaultFormLayout from "./layouts/forms/DefaultFormLayout";
 // To learn more, see: https://www.webiny.com/docs/page-builder/theming/introduction.
 export default () => [
     new ThemePlugin(theme),
-    
+
     new PbPageLayoutPlugin({
         name: "static",
         title: "Static page",
         component: StaticLayout
-    }),    
+    }),
 
 +   new PbPageLayoutPlugin({
 +       name: "blank",
 +       title: "Blank page",
 +       component: StaticLayout
 +   }),
-    
+
     new FbFormLayoutPlugin({
         name: "default",
         title: "Default form layout",
@@ -203,9 +210,9 @@ With the above code in place, we should be able to create pages and select the *
 
 ## Styling Page Layouts
 
-As mentioned in the [Introduction](/docs/{version}/page-builder/theming/introduction) section, Webiny relies on Emotion for all of the styling needs. This includes styling of page layouts. 
+As mentioned in the [Introduction](/docs/{version}/page-builder/theming/introduction) section, Webiny relies on Emotion for all of the styling needs. This includes styling of page layouts.
 
-If we were to take another look at the `apps/theme/layouts/pages/Static.tsx` file, we could notice the Emotion's [`Global`](https://emotion.sh/docs/globals) component being used to inject global styles into the page. We could also notice the usage of the [`@emotion/styled`](https://emotion.sh/docs/styled) package, which enables us to create styled components. In this case, the `Layout` component.
+If we were to take another look at the [`apps/theme/layouts/pages/Static.tsx`](https://github.com/webiny/webiny-js/blob/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/layouts/pages/Static.tsx) file, we could notice the Emotion's [`Global`](https://emotion.sh/docs/globals) component being used to inject global styles into the page. We could also notice the usage of the [`@emotion/styled`](https://emotion.sh/docs/styled) package, which enables us to create styled components. In this case, the `Layout` component.
 
 ```diff-tsx apps/theme/layouts/pages/Static.tsx
 import React from "react";
@@ -218,7 +225,7 @@ import { Footer } from "./Static/Footer";
 +     html {
 +         scroll-behavior: smooth;
 +     }
-+ 
++
 +     @media screen and (prefers-reduced-motion: reduce) {
 +         html {
 +             scroll-behavior: smooth;
@@ -230,7 +237,7 @@ import { Footer } from "./Static/Footer";
 +     min-height: 100vh;
 +     display: flex;
 +     flex-direction: column;
-+ 
++
 +     footer {
 +         margin-top: auto;
 +     }
@@ -251,4 +258,8 @@ const Static: React.FC<{ children: React.ReactNode }> = ({ children }) => {
 export default Static;
 ```
 
-The `Header` and `Footer` components that are being rendered in the layout are also styled using Emotion.   
+<Alert type={"info"}>
+
+  The `Header` and `Footer` components that are being included in the layout are also styled using Emotion.
+
+</Alert>
