wip: update theming docs

--- a/src/docs/5.34.x/page-builder/theming/best-practices.mdx
+++ b/src/docs/5.34.x/page-builder/theming/best-practices.mdx
@@ -1,6 +1,6 @@
 ---
-title: Best Practices
-description: Best practices when it comes to theme development.
+title: ✍🏻 Best Practices
+description: Theme development best practices.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -9,16 +9,79 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What You’ll Learn">
 
-- what does the Page Builder theme consist of
-- what plugins are used in Page Builder theme
+- what are some of the best practices when it comes to theme and styling development
 
 </Alert>
 
 ## Overview
 
-## Access theme via context
-## use mq
-## page elements - when to put styles into theme
-## global styles
-## overriding existing elements
-## styles by id
+### Access theme via context
+
+✍🏻
+
+### Use `mq` Utility Function For Easier Styling
+
+One of the tools that is recommended in [Emotion](https://emotion.sh/docs/introduction) library's documentation portal is [Facepaint](https://github.com/emotion-js/facepaint). The library enables the developer to easily define CSS rules for multiple pre-defined breakpoints, for example:
+
+```ts
+import { css } from "emotion";
+import facepaint from "facepaint";
+
+const mq = facepaint([
+  "@media(min-width: 420px)",
+  "@media(min-width: 920px)",
+  "@media(min-width: 1120px)"
+]);
+
+const myClassName = css(
+  mq({
+    color: ["red", "green", "blue", "darkorchid"]
+  })
+);
+```
+
+With this 5.35.0 release, this library is included in the [`@webiny/app-page-builder-elements`](https://github.com/webiny/webiny-js/tree/dev/packages/app-page-builder-elements) package, enabling users to immediately use it, without the need to install it first. Furthermore, by importing the `mq` utility function, users can immediately start writing their per-breakpoint styles, because the function is already configured to follow the breakpoints defined in the [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts). For example:
+
+```tsx
+import React from "react";
+import { mq } from "@webiny/app-page-builder-elements";
+import styled from "@emotion/styled";
+
+// Basic usage.
+export const HeroSection = styled("div")(() =>
+  mq({ color: ["red", "green", "blue", "gray", "white"] })
+);
+
+// With theme being accessed via the `theme` argument:
+export const HeroSectionWithTheme = styled("div")(
+  {
+    lineHeight: "125%",
+    backgroundColor: "#fff",
+    backgroundRepeat: "no-repeat"
+  },
+  ({ theme }) =>
+    mq({
+      color: [
+        "red",
+        theme.styles.colors.color1,
+        theme.styles.colors.color2,
+        theme.styles.colors.color3,
+        theme.styles.colors.color4
+      ]
+    })
+);
+```
+
+### page elements - when to put styles into theme
+
+✍🏻
+
+### global styles
+
+✍🏻
+
+### overriding existing elements
+
+✍🏻
+
+### styles by id
