wip: update theming docs

--- a/src/docs/5.34.x/page-builder/theming/best-practices.mdx
+++ b/src/docs/5.34.x/page-builder/theming/best-practices.mdx
@@ -1,6 +1,6 @@
 ---
 title: ✍🏻 Best Practices
-description: Theme development best practices.
+description: Theme development and styling best practices.
 ---
 
 import { Alert } from "@/components/Alert";
