--- a/src/docs/5.34.x/page-builder/theming/introduction.mdx
+++ b/src/docs/5.34.x/page-builder/theming/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: How theming works inside Webiny Page Builder.
+description: An overview of how theming works in Webiny's Page Builder application.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -9,8 +9,8 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="What You’ll Learn">
 
-- what does the Page Builder theme consist of
-- what plugins are used in Page Builder theme
+- what are the different parts that make up a theme
+- what plugins are used upon creating themes
 
 </Alert>
 
@@ -18,7 +18,7 @@ import { Alert } from "@/components/Alert";
 
 By default, every Webiny project includes the default website theme which defines different visual aspects of your website, for example the default set of colors, typography, the default page layout, and more.
 
-In a new Webiny project, if we were to open the [`apps/theme`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/cwp-template-aws/template/common/apps/theme) folder and in it the [`apps/theme/index.ts`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/index.ts) file, we'd see the following: 
+In a new Webiny project, if we were to open the [`apps/theme`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/cwp-template-aws/template/common/apps/theme) folder and in it the [`apps/theme/index.ts`](https://github.com/webiny/webiny-js/tree/v5.35.0/packages/cwp-template-aws/template/common/apps/theme/index.ts) file, we'd see the following:
 
 ```ts apps/theme/index.ts
 import { PbPageLayoutPlugin } from "@webiny/app-page-builder";
@@ -36,19 +36,19 @@ import DefaultFormLayout from "./layouts/forms/DefaultFormLayout";
 // Ultimately, theme and layouts need to be registered via their respective plugins.
 // To learn more, see: https://www.webiny.com/docs/page-builder/theming/introduction.
 export default () => [
-    new ThemePlugin(theme),
-    
-    new PbPageLayoutPlugin({
-        name: "static",
-        title: "Static page",
-        component: StaticLayout
-    }),
-    
-    new FbFormLayoutPlugin({
-        name: "default",
-        title: "Default form layout",
-        component: DefaultFormLayout
-    })
+  new ThemePlugin(theme),
+
+  new PbPageLayoutPlugin({
+    name: "static",
+    title: "Static page",
+    component: StaticLayout
+  }),
+
+  new FbFormLayoutPlugin({
+    name: "default",
+    title: "Default form layout",
+    component: DefaultFormLayout
+  })
 ];
 ```
 
