--- a/src/docs/5.34.x/page-builder/theming/page-layouts.mdx
+++ b/src/docs/5.34.x/page-builder/theming/page-layouts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Page Layouts
-description: How theming works inside Webiny Page Builder.
+description: Learn how to create and assign page layouts to pages created with Page Builder.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -13,8 +13,8 @@ import pageBuilderSettingsIcon from "./images/page-builder-settings-icon.png";
 
 <Alert type="success" title="What You’ll Learn">
 
-- what does the Page Builder theme consist of
-- what plugins are used in Page Builder theme
+- how to create page layouts
+- how to assign page layouts to pages created with Page Builder
 
 </Alert>
 
@@ -142,6 +142,8 @@ This is achieved by selecting the desired layout in the **Layout** field, locate
 <Alert type={'info'}>
 
 Page settings can be accessed by clicking on the cogwheel icon, located in the top right corner of the page editor.
+
+{" "}
 <Image src={pageBuilderSettingsIcon} title={"Selecting Page Layout via Page Settings"} />
 
 </Alert>
@@ -260,6 +262,6 @@ export default Static;
 
 <Alert type={"info"}>
 
-  The `Header` and `Footer` components that are being included in the layout are also styled using Emotion.
+The `Header` and `Footer` components that are being included in the layout are also styled using Emotion.
 
 </Alert>
