--- a/src/docs/5.34.x/page-builder/theming/theme-object.mdx
+++ b/src/docs/5.34.x/page-builder/theming/theme-object.mdx
@@ -1,6 +1,6 @@
 ---
 title: Theme Object
-description: How theming works inside Webiny Page Builder.
+description: Learn about the theme object and how it's used in the code.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -11,8 +11,8 @@ import staticPageTemplate from "./images/static-page-template.png";
 
 <Alert type="success" title="What You’ll Learn">
 
-- what does the Page Builder theme consist of
-- what plugins are used in Page Builder theme
+- what are the different properties of the theme object
+- how to properly access the theme object in the code 
 
 </Alert>
 
