wip: update theming docs

--- a/src/docs/5.34.x/page-builder/theming/introduction.mdx
+++ b/src/docs/5.34.x/page-builder/theming/introduction.mdx
@@ -58,7 +58,9 @@ Respectively, via the [`ThemePlugin`](https://github.com/webiny/webiny-js/blob/v
 2. registers the **Static page** layout, to be used with pages created with the Page Builder application
 3. registers the **Default form layout** layout, to be used with forms created with the Form Builder application
 
-In the following sections, we cover the essential information and best practices related to the theme object and page layouts. If you're interested in form layouts and styling forms created with the Form Builder application, please visit the separate [Form Builder Theming](/docs/{version}/form-builder/theming/introduction) section of articles.
+In the following sections, we cover the essential information and best practices related to the theme object and page layouts. 
+
+[//]: # (If you're interested in form layouts and styling forms created with the Form Builder application, please visit the separate [Form Builder Theming]&#40;/docs/{version}/form-builder/theming/introduction&#41; section of articles.)
 
 ## How Styling Works
 
