--- a/src/docs/5.34.x/page-builder/theming/page-layouts.mdx
+++ b/src/docs/5.34.x/page-builder/theming/page-layouts.mdx
@@ -143,7 +143,7 @@ This is achieved by selecting the desired layout in the **Layout** field, locate
 
 Page settings can be accessed by clicking on the cogwheel icon, located in the top right corner of the page editor.
 
-<Image src={pageBuilderSettingsIcon} title={"Selecting Page Layout via Page Settings"} />
+<Image src={pageBuilderSettingsIcon} title={"Accessing Page Settings in the Page Editor"} />
 
 </Alert>
 
