wip: update theming docs

--- a/src/docs/5.34.x/page-builder/theming/theme-object.mdx
+++ b/src/docs/5.34.x/page-builder/theming/theme-object.mdx
@@ -5,7 +5,6 @@ description: Learn about the theme object and how it's used in the code.
 
 import { Alert } from "@/components/Alert";
 import themeColorsInEditor from "./images/theme-colors-in-editor.png";
-import staticPageTemplate from "./images/static-page-template.png";
 
 <!-- Always include this section on top of the page. -->
 
@@ -293,7 +292,7 @@ As we can see, the `stylesById` getter function accepts a typography variant ID 
 
 ### Custom Page Elements
 
-If needed, theme object can also be accessed when creating custom page elements, via the `useRenderer` React hook. For example:
+If needed, theme object can also be accessed when creating [custom page elements](/docs/{version}/page-builder/extending/create-a-page-element), via the `useRenderer` React hook. For example:
 
 ```tsx
 import React from "react";
@@ -317,8 +316,7 @@ export const createCustomPageElement = () => {
 
 <Alert type={"info"}>
 
-  To learn more about custom page elements, check out the existing [Create a Custom Page Element](/docs/{version}/page-builder/extending/create-a-page-element)
-  article.
+  Most often, styles for custom page elements are introduced via one or more standalone Emotion styled components.
 
 </Alert>
 
